[RBP] feat: Implement Liquid Assets Section
- Created liquid-assets.ts section with interactive prompts
- Implemented validation for currency, integer, and percentage inputs
- Added state persistence with progress tracking
- Created comprehensive test suite (14 tests, all passing)
- Updated .gitignore to allow scripts/onboarding/ (public distribution)

Features:
- Prompts for total liquid cash value
- Prompts for number of accounts
- Prompts for average yield percentage
- Optional account structure description
- Converts percentage to decimal for data storage
- Marks next section as 'investments'
- Proper error handling with readline cleanup

Bead: family-office-bg0.2

--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,9 @@ scripts/google-sheets/portfolio-optimizer/
 .claude/data/sessions/
 .mcp.json
 
-# Private scripts
-scripts/
+# Private scripts (except public onboarding CLI)
+scripts/*
+!scripts/onboarding/
 
 # Private session data and conversations
 .claude/data/sessions/
