[RBP] feat: Add pre-codex validation script and report
- Create comprehensive validation script (42 checks)
- Validate system architecture integrity
- Check multi-broker support implementation
- Verify CSV mapping templates
- Validate documentation completeness
- Generate validation report
- Update .gitignore to allow scripts/qa/
- All checks passed - system ready for Codex review

Bead: family-office-c3m

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ scripts/*
 !scripts/rbp/
 scripts/rbp/*
 !scripts/rbp/test-runner.sh
+!scripts/qa/
 
 # Private session data and conversations
 .claude/data/sessions/
